# coffeescript-zed

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  extension.toml
grammars/: coffeescript.wasm
languages/coffeescript/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm
src/: coffeescript.rs
